k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker
    foo: bar4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pal-tracker
      name: pal-tracker-pod
  template:
    metadata:
      labels:
        app: pal-tracker
        name: pal-tracker-pod
    spec:
      containers:
        - name: pal-tracker-container
          image: ellinj/pal-tracker:v1
          resources:
              limits: 
                cpu: 200m
                memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
