k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker
  annotations:
    kubernetes.io/ingress.class: nginx
